replace base64 decoder from com.sun.* with commons-codec (compiler warning: sun.misc.BASE64Decoder is Sun proprietary API and may be removed in a future release)
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@11639 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f